Data conflict fix, minor z-index fix, sync from server

--- a/src/assets/styles/7.utilities/overrides.scss
+++ b/src/assets/styles/7.utilities/overrides.scss
@@ -142,10 +142,10 @@ body#store-locator-face-reality-acne-clinic {
 }
 
 #swym-close-notepad-button {
-  z-index: 10;
+  z-index: 10 !important;
 }
 
 #swym-plugin .swym-tab-overlay,
 #swym-hosted-plugin .swym-tab-overlay {
-  z-index: 9;
+  z-index: 9 !important;
 }
